# Needlework

./: LICENSE  README.md  nuxt.config.ts  package-lock.json  package.json
src/: app.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: data.rs  events.rs  handlers.rs  lcu.rs  lcu_schema.rs  main.rs  server.rs
src-tauri/src/application/: services.rs
src-tauri/src/data/: apis.rs  metadata.rs  models.rs  types.rs
src-tauri/src/server/: events.rs  handlers.rs
src/components/: ApplicationTitle.vue  Endpoint.vue  ExternalLink.vue  ParameterTable.vue  ResponseModal.vue  Schema.vue  SchemaTable.vue
src/composables/: invoker.ts
src/layouts/: default.vue  window.vue
src/middleware/: route.global.ts
src/pages/: console.vue  data.vue  index.vue  schemas.vue  websocket.vue
src/pages/endpoint/: [path].vue
src/public/css/: application.css
